:memo: Imports e dataset

--- a/iris_knn.ipynb
+++ b/iris_knn.ipynb
@@ -38,13 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🧾 2. Ler o dataset Iris\n",
-    "\n",
     "CSV_URL = \"https://raw.githubusercontent.com/marcelovca90-inatel/AG2/refs/heads/main/iris.csv\"\n",
     "\n",
     "df = pd.read_csv(CSV_URL)\n",
     "print(\"Pré-visualização dos dados:\")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   }
  ],
