separando features e target

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b05eb79b",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,6 @@
     "\n",
     "# Lendo o arquivo corretamente - a primeira linha é dados, não cabeçalho\n",
     "df = pd.read_csv('https://raw.githubusercontent.com/marcelovca90-inatel/AG2/refs/heads/main/iris.csv')\n",
-    "\n",
     "\n",
     "pd.set_option('display.width', 1000)\n",
     "print(df.head())"
@@ -86,6 +85,25 @@
     "\n",
     "pd.set_option('display.width', 1000)\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae1578d",
+   "metadata": {},
+   "source": [
+    "Separando features(x) e target(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "33c36464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['sepal_length_cm', 'sepal_width_cm', 'petal_length_cm', 'petal_width_cm']]\n",
+    "y = df['species']\n"
    ]
   }
  ],
