--- a/iris_knn.ipynb
+++ b/iris_knn.ipynb
@@ -10,17 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "bccad211",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-    "import numpy as np\n",
-    "import joblib"
+    "from sklearn.neighbors import KNeighborsClassifier \n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "import numpy as np"
    ]
   },
   {
@@ -33,22 +32,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "462b3fee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame Iris:\n",
+      "   sepal_length_cm  sepal_width_cm  petal_length_cm  petal_width_cm  \\\n",
+      "0              5.1             3.5              1.4             0.2   \n",
+      "1              4.9             3.0              1.4             0.2   \n",
+      "2              4.7             3.2              1.3             0.2   \n",
+      "3              4.6             3.1              1.5             0.2   \n",
+      "4              5.0             3.6              1.4             0.2   \n",
+      "\n",
+      "       species  \n",
+      "0  Iris-setosa  \n",
+      "1  Iris-setosa  \n",
+      "2  Iris-setosa  \n",
+      "3  Iris-setosa  \n",
+      "4  Iris-setosa  \n"
+     ]
+    }
+   ],
    "source": [
-    "CSV_URL = \"https://raw.githubusercontent.com/marcelovca90-inatel/AG2/refs/heads/main/iris.csv\"\n",
+    "# 1. Baixar o conjunto de dados no GitHub\n",
+    "# 2. Fazer a leitura dos dados utilizando Pandas\n",
     "\n",
-    "df = pd.read_csv(CSV_URL)\n",
-    "print(\"Pré-visualização dos dados:\")\n",
-    "df.head()"
+    "# Arquivo CSV\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/marcelovca90-inatel/AG2/refs/heads/main/iris.csv\") \n",
+    "    \n",
+    "print(\"DataFrame Iris:\")\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c1c0d17",
+   "metadata": {},
+   "source": [
+    "Mapeamento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9e7d2df7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "DataFrame após a conversão de 'species' (últimas 5 linhas):\n",
+      "     sepal_length_cm  sepal_width_cm  petal_length_cm  petal_width_cm  species\n",
+      "145              6.7             3.0              5.2             2.3        3\n",
+      "146              6.3             2.5              5.0             1.9        3\n",
+      "147              6.5             3.0              5.2             2.0        3\n",
+      "148              6.2             3.4              5.4             2.3        3\n",
+      "149              5.9             3.0              5.1             1.8        3\n",
+      "\n",
+      "Tipo de dado para 'species' após a conversão: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cecco\\AppData\\Local\\Temp\\ipykernel_51024\\1194736098.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['species'] = df['species'].replace(mapeamento_especies)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Mapeamento para conversão:\n",
+    "# Iris-setosa=1, Iris-versicolor=2, Iris-virginica=3\n",
+    "mapeamento_especies = {\n",
+    "    'Iris-setosa': 1,\n",
+    "    'Iris-versicolor': 2,\n",
+    "    'Iris-virginica': 3\n",
+    "}\n",
+    "\n",
+    "# Converter os valores da coluna 'species' para inteiro\n",
+    "df['species'] = df['species'].replace(mapeamento_especies)\n",
+    "\n",
+    "print(\"\\nDataFrame após a conversão de 'species' (últimas 5 linhas):\")\n",
+    "print(df.tail())\n",
+    "print(\"\\nTipo de dado para 'species' após a conversão:\", df['species'].dtype)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e83c85b",
+   "metadata": {},
+   "source": [
+    "Separar features (X) e (Y) classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ac6114ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho do conjunto de Treinamento: 120 amostras (80%)\n",
+      "Tamanho do conjunto de Teste: 30 amostras (20%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separar features (X) e target (y)\n",
+    "X = df.drop('species', axis=1) # Colunas das 4 medidas\n",
+    "y = df['species']             # Coluna espécies\n",
+    "\n",
+    "# 4. Separar e embaralhar os dados (80% treino, 20% teste) \n",
+    "# O argumento shuffle=True é o padrão. random_state garante a reprodutibilidade.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=True, random_state=42)\n",
+    "\n",
+    "print(f\"Tamanho do conjunto de Treinamento: {len(X_train)} amostras (80%)\")\n",
+    "print(f\"Tamanho do conjunto de Teste: {len(X_test)} amostras (20%)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6fe55f0",
+   "metadata": {},
+   "source": [
+    "Treinar usando o modelo KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b8392688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Modelo k-NN (k=5) treinado com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usando k=5 (valor inicial escolhido)\n",
+    "k_value = 5\n",
+    "modelo_knn = KNeighborsClassifier(n_neighbors=k_value) \n",
+    "\n",
+    "# 5. Treinar o modelo escolhido usando 80% dos dados.\n",
+    "modelo_knn.fit(X_train, y_train) \n",
+    "\n",
+    "print(f\"\\nModelo k-NN (k={k_value}) treinado com sucesso!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "932190bf",
+   "metadata": {},
+   "source": [
+    "Avaliar o modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9f569abe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Métricas de Avaliação do Modelo k-NN ---\n",
+      "Acurácia: 100.00%\n",
+      "\n",
+      "Relatório de Classificação:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           1       1.00      1.00      1.00        10\n",
+      "           2       1.00      1.00      1.00         9\n",
+      "           3       1.00      1.00      1.00        11\n",
+      "\n",
+      "    accuracy                           1.00        30\n",
+      "   macro avg       1.00      1.00      1.00        30\n",
+      "weighted avg       1.00      1.00      1.00        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Avaliar o modelo escolhido usando os 20% restantes.\n",
+    "y_pred = modelo_knn.predict(X_test)\n",
+    "\n",
+    "# 7. Exibir métricas de avaliação.\n",
+    "acuracia = accuracy_score(y_test, y_pred)\n",
+    "relatorio = classification_report(y_test, y_pred)\n",
+    "\n",
+    "print(\"\\n--- Métricas de Avaliação do Modelo k-NN ---\")\n",
+    "print(f\"Acurácia: {acuracia*100:.2f}%\")\n",
+    "print(\"\\nRelatório de Classificação:\\n\", relatorio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25a9cc68",
+   "metadata": {},
+   "source": [
+    "Predição por entrada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "101dfb60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Classificação de Amostra Arbitrária ---\n",
+      "\n",
+      "A amostra pertence à espécie: **virginica**\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dicionário que converte o número de volta para o nome da espécie\n",
+    "mapeamento_inverso = {\n",
+    "    1: 'setosa', \n",
+    "    2: 'versicolor', \n",
+    "    3: 'virginica'\n",
+    "}\n",
+    "\n",
+    "# 7. Criar uma opção que permita ao usuário inserir dados arbitrários.\n",
+    "def classificar_amostra_knn(modelo):\n",
+    "    print(\"\\n--- Classificação de Amostra Arbitrária ---\")\n",
+    "    \n",
+    "    try:\n",
+    "        # As 4 medidas de entrada\n",
+    "        comp_sepala = float(input(\"Comprimento da sépala (cm): \"))\n",
+    "        larg_sepala = float(input(\"Largura da sépala (cm): \"))\n",
+    "        comp_petala = float(input(\"Comprimento da pétala (cm): \"))\n",
+    "        larg_petala = float(input(\"Largura da pétala (cm): \"))\n",
+    "\n",
+    "        # Criar um DataFrame com a nova amostra para o modelo\n",
+    "        nova_amostra = pd.DataFrame([[comp_sepala, larg_sepala, comp_petala, larg_petala]], \n",
+    "                                     columns=X_train.columns)\n",
+    "\n",
+    "        # Usar a função predict \n",
+    "        previsao_num = modelo.predict(nova_amostra)[0]\n",
+    "        \n",
+    "        # Mapear o resultado numérico de volta para o nome da espécie\n",
+    "        previsao_especie = mapeamento_inverso.get(previsao_num)\n",
+    "        \n",
+    "        # Imprimir a qual a espécie a amostra pertence (\"setosa\", \"versicolor\" ou \"virginica\")\n",
+    "        print(f\"\\nA amostra pertence à espécie: **{previsao_especie}**\")\n",
+    "\n",
+    "    except ValueError:\n",
+    "        print(\"Entrada inválida. Por favor, insira apenas números.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Ocorreu um erro: {e}\")\n",
+    "\n",
+    "# Chamar a função para classificação do usuário\n",
+    "classificar_amostra_knn(modelo_knn)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
